# discord-authority

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic.rs  embed.rs  poll.rs  rich_presence.rs
src/: client.rs  error.rs  events.rs  lib.rs
src/gateway/: mod.rs  opcodes.rs  payloads.rs
src/http/: mod.rs
src/models/: channel.rs  embed.rs  guild.rs  message.rs  mod.rs  poll.rs  presence.rs  user.rs
src/utils/: mod.rs  snowflake.rs
