[package]
name = "discord-authority"
version = "0.1.1"
edition = "2021"
authors = ["ege0x77czz"]
description = "A fast, async Discord selfbot library for Rust"
license = "MIT"
repository = "https://github.com/ege0x77czz/discord-authority"
keywords = ["discord", "selfbot", "api", "client", "async"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# WebSocket
futures-util = "0.3"
tungstenite = "0.24"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Random
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "embed"
path = "examples/embed.rs"

[[example]]
name = "rich_presence"
path = "examples/rich_presence.rs"

[[example]]
name = "poll"
path = "examples/poll.rs"

